# desync-cc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  config.cfg  desync.py  desync_jb_generator.py  example.sh  instr_prefix_list.txt  log.txt  prototype.py  pyelf_test.py  single_byte_instr_list.txt
config/: config.cfg
config/predicates/: diablo.txt
desync/: desync  desync-junk
predicates/: basic.txt  special.txt
scripts/: desync  desync-build.sh  desync-cc-subcommand.sh  desync-cc.sh  desync-retest.sh  desync-setup.sh  desync-test.sh  nodesync-build.sh  nodesync-retest.sh  nodesync-test.sh
src/junk/: desync_jb_generator.py
src/pred/: assembler.hpp  assembly_parser.hpp  configuration.hpp  configuration_parser.hpp  control_flow_graph.hpp  desynchronizer.hpp  disassembler.hpp  logger.hpp  main.cpp  options.hpp  predicate_parser.hpp
src/util/: file.hpp  print.hpp  string.hpp  time.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  desync-cc-subcommand.sh  desync-cc.sh  desync-test.sh  example.sh
test/basic/: Makefile  main.c  main.s
test/basic1/: Makefile
test/basic2/: Makefile  main.c  other.c  other.h
test/experiment/: ex1 copy.s  ex1.s  main.s  simple.s
